--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VideoPlay.fun - Watch Free Videos</title>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
+  <header>
+    <h1>🎬 VideoPlay.fun</h1>
+    <p>Watch trending videos, click to play!</p>
+  </header>
 
+  <main id="video-list"></main>
+
+  <script src="assets/script.js"></script>
+</body>
+</html>
