--- a/index.html
+++ b/index.html
@@ -1,19 +1,324 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VideoPlay.fun - Watch Free Videos</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Video Gallery — Dark</title>
+  <style>
+    :root{
+      --bg:#0b0c0d;
+      --panel:#0f1112;
+      --muted:#9aa4ad;
+      --accent:#e50914; /* Netflix red */
+      --card:#111315;
+      --glass: rgba(255,255,255,0.03);
+      --radius:12px;
+      --gap:14px;
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      background:linear-gradient(180deg,var(--bg),#050506);
+      color:#e6eef3;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      padding:24px;
+    }
+
+    header{
+      display:flex;
+      gap:16px;
+      align-items:center;
+      justify-content:space-between;
+      margin-bottom:18px;
+    }
+    .brand{
+      display:flex;
+      gap:12px;
+      align-items:center;
+    }
+    .logo{
+      width:44px;
+      height:44px;
+      background:linear-gradient(135deg,#ff416c,#e50914);
+      display:grid;
+      place-items:center;
+      border-radius:8px;
+      font-weight:700;
+      color:white;
+    }
+    h1{margin:0;font-size:18px;letter-spacing:0.2px}
+    .sub{color:var(--muted);font-size:13px}
+
+    .controls{
+      display:flex;
+      gap:10px;
+      align-items:center;
+    }
+    .search{
+      background:var(--glass);
+      padding:8px 12px;
+      border-radius:10px;
+      border:1px solid rgba(255,255,255,0.03);
+      color:var(--muted);
+      min-width:200px;
+    }
+    .search:focus{outline: none; color: #e6eef3}
+
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(4,1fr);
+      gap:var(--gap);
+    }
+
+    /* responsive */
+    @media (max-width:1100px){ .grid{grid-template-columns: repeat(3,1fr);} .search{min-width:160px}}
+    @media (max-width:820px){ .grid{grid-template-columns: repeat(2,1fr);} header{flex-direction:column;align-items:flex-start;gap:12px} }
+    @media (max-width:480px){ .grid{grid-template-columns: 1fr;} body{padding:14px} .search{min-width:120px} }
+
+    .card{
+      background: linear-gradient(180deg, rgba(255,255,255,0.02), transparent);
+      border-radius:12px;
+      overflow:hidden;
+      border:1px solid rgba(255,255,255,0.03);
+      transition: transform .18s ease, box-shadow .18s ease;
+      cursor:pointer;
+      display:flex;
+      flex-direction:column;
+      min-height:150px;
+    }
+    .card:hover{
+      transform:translateY(-6px);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+    }
+    .thumb{
+      position:relative;
+      padding-top:56.25%; /* 16:9 */
+      background:#0a0b0c;
+    }
+    .thumb img{
+      position:absolute;
+      inset:0;
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      display:block;
+    }
+    .play-badge{
+      position:absolute;
+      left:10px;
+      bottom:10px;
+      background:linear-gradient(90deg,var(--accent),#ff6a6a);
+      padding:8px 10px;
+      border-radius:999px;
+      font-weight:700;
+      font-size:13px;
+      display:flex;
+      gap:8px;
+      align-items:center;
+      color:white;
+      box-shadow:0 6px 18px rgba(229,9,20,0.12);
+    }
+    .play-icon{
+      width:14px;height:14px; display:inline-block;
+      mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="%23fff" d="M4 2.99v18L20 12 4 2.99z"/></svg>') no-repeat center;
+      background:white;
+      transform:translateX(1px);
+    }
+
+    .meta{
+      padding:12px;
+      display:flex;
+      flex-direction:column;
+      gap:8px;
+    }
+    .title{
+      font-weight:600;
+      font-size:15px;
+      line-height:1.2;
+      color:#e6eef3;
+      margin:0;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      display:-webkit-box;
+      -webkit-line-clamp:2;
+      -webkit-box-orient:vertical;
+    }
+    .muted{
+      color:var(--muted);
+      font-size:13px;
+    }
+
+    /* empty state */
+    .empty{
+      text-align:center;
+      padding:40px;
+      color:var(--muted);
+      border:1px dashed rgba(255,255,255,0.03);
+      border-radius:12px;
+      margin-top:18px;
+    }
+
+    /* loader */
+    .loader{
+      display:inline-block;
+      width:16px;height:16px;border-radius:50%;
+      border:2px solid rgba(255,255,255,0.08);
+      border-top-color:var(--accent);
+      animation:spin .9s linear infinite;
+    }
+    @keyframes spin{to{transform:rotate(360deg)}}
+
+  </style>
 </head>
 <body>
   <header>
-    <h1>🎬 VideoPlay.fun</h1>
-    <p>Watch trending videos, click to play!</p>
+    <div class="brand">
+      <div class="logo">V</div>
+      <div>
+        <h1>Video Gallery</h1>
+        <div class="sub">Public gallery — thumbnails load from <strong>videos.json</strong></div>
+      </div>
+    </div>
+
+    <div class="controls">
+      <input id="search" class="search" placeholder="Search videos..." aria-label="Search videos" />
+    </div>
   </header>
 
-  <main id="video-list"></main>
+  <main>
+    <div id="grid" class="grid" aria-live="polite"></div>
 
-  <script src="assets/script.js"></script>
+    <div id="empty" class="empty" style="display:none">
+      <div style="margin-bottom:12px">Koi video nahi mila</div>
+      <div class="muted">Ensure <code>videos.json</code> is reachable and correctly formatted.</div>
+    </div>
+
+    <div id="loading" style="display:none;margin-top:18px">
+      <span class="loader"></span>
+      <span style="margin-left:10px;color:var(--muted)">Loading videos...</span>
+    </div>
+  </main>
+
+  <script>
+    // Configuration: update this if your videos.json is elsewhere
+    const VIDEOS_JSON = 'videos.json'; // or full Bunny CDN URL
+
+    const grid = document.getElementById('grid');
+    const loadingEl = document.getElementById('loading');
+    const emptyEl = document.getElementById('empty');
+    const searchInput = document.getElementById('search');
+
+    let videos = [];
+
+    function showLoading(show){
+      loadingEl.style.display = show ? 'block' : 'none';
+    }
+    function showEmpty(show){
+      emptyEl.style.display = show ? 'block' : 'none';
+    }
+
+    async function loadVideos(){
+      showLoading(true);
+      showEmpty(false);
+      try {
+        const res = await fetch(VIDEOS_JSON, {cache: 'no-cache'});
+        if(!res.ok) throw new Error('Fetch failed: ' + res.status);
+        const data = await res.json();
+        if(!Array.isArray(data)) {
+          console.error('videos.json should be an array of objects');
+          videos = [];
+        } else {
+          videos = data.map((v, i) => ({...v, _index:i}));
+        }
+        renderGrid(videos);
+      } catch(err){
+        console.error(err);
+        grid.innerHTML = '';
+        showEmpty(true);
+      } finally{
+        showLoading(false);
+      }
+    }
+
+    function createCard(video){
+      const a = document.createElement('a');
+      a.className = 'card';
+      // Build video link: video.html?url=ENCODED_URL&title=ENCODED_TITLE
+      const params = new URLSearchParams({
+        url: video.url || '',
+        title: video.title || '',
+        thumb: video.thumbnail || ''
+      });
+      a.href = 'video.html?' + params.toString();
+
+      // Accessibility
+      a.setAttribute('role','link');
+      a.setAttribute('aria-label', video.title || 'Play video');
+
+      const thumb = document.createElement('div');
+      thumb.className = 'thumb';
+      const img = document.createElement('img');
+      img.loading = 'lazy';
+      img.alt = video.title || 'video thumbnail';
+      img.src = video.thumbnail || '';
+      thumb.appendChild(img);
+
+      const play = document.createElement('div');
+      play.className = 'play-badge';
+      play.innerHTML = '<span class="play-icon" aria-hidden="true"></span><span style="font-size:13px;">PLAY</span>';
+      thumb.appendChild(play);
+
+      const meta = document.createElement('div');
+      meta.className = 'meta';
+      const title = document.createElement('h3');
+      title.className = 'title';
+      title.textContent = video.title || 'Untitled';
+      const mut = document.createElement('div');
+      mut.className = 'muted';
+      mut.textContent = video.description ? video.description : '';
+
+      meta.appendChild(title);
+      meta.appendChild(mut);
+
+      a.appendChild(thumb);
+      a.appendChild(meta);
+
+      return a;
+    }
+
+    function renderGrid(list){
+      grid.innerHTML = '';
+      if(!list || list.length === 0){
+        showEmpty(true);
+        return;
+      } else showEmpty(false);
+
+      const frag = document.createDocumentFragment();
+      for(const v of list){
+        frag.appendChild(createCard(v));
+      }
+      grid.appendChild(frag);
+    }
+
+    // Search
+    searchInput.addEventListener('input', (e)=>{
+      const q = e.target.value.trim().toLowerCase();
+      if(!q) return renderGrid(videos);
+      const filtered = videos.filter(v => {
+        return (v.title && v.title.toLowerCase().includes(q)) ||
+               (v.description && v.description.toLowerCase().includes(q));
+      });
+      renderGrid(filtered);
+    });
+
+    // initial load
+    loadVideos();
+
+    // optional: refresh every X seconds to pick up changes from videos.json
+    // setInterval(loadVideos, 1000 * 60 * 1); // every 1 minute (uncomment if you want)
+  </script>
 </body>
 </html>
